--- a/css.css
+++ b/css.css
@@ -4,11 +4,19 @@ body
     background-color: rgb(0, 10, 3);
 }
 
+img
+{
+        width: 75px;
+        height: 75px;
+        margin-left: 20px;
+        margin-right: 20px;
+}
 
 #foto
 {
     width: 600px;
     height: 600px;
+    border-radius: 50px;
 }
 
 #div1
@@ -18,6 +26,10 @@ body
     margin-top: 0px;
     margin-right: -10px;
     margin-left: -10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
 }
 
 #divText
@@ -39,7 +51,7 @@ body
     background-color: rgba(127, 255, 212, 0);
     font-size: 17px;
     font-weight: 700;
-    border-color: rgb(21, 122, 55);
+    border-color: rgb(122, 78, 21);
     color: rgb(1, 43, 20);
 }
 
@@ -49,7 +61,9 @@ body
     margin-left: -10px;
     margin-right: -10px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 #topdiv
@@ -69,6 +83,9 @@ body
     border-left: 100px solid transparent;
     border-right: 100px solid transparent;
     border-top: 100px solid #c57000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     z-index: 2;
 }
 
@@ -151,12 +168,12 @@ body
     z-index: 1;
 }
 
-#tech
+#h1tech
 {
-    display: flex;
-    justify-content: space-between;
-    width: 1100px;
-    height: 600px;
-    background-color: rgb(1, 26, 8);
-    margin-top: 250px;
+    color: #ec911a;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 800;
+    margin-top: 25px;
+    margin-bottom: 200px;
+    text-align: center;
 }
